# biomedgps

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.dev.md  README.md  build-docker.sh
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: publish-bin.yml  publish-docker-image.yml
cromwell-api-rs/: .gitignore  Cargo.toml  README.md
cromwell-api-rs/examples/: README.md  boxplot.rs  hello_world.rs  metadata_output.json
cromwell-api-rs/examples/boxplot/: README.md  boxplot.R  inputs.json  manifest.json  schema.json  workflow.wdl
cromwell-api-rs/examples/hello_world/: inputs.json  intputs.json  manifest.json  schema.json  workflow.wdl
cromwell-api-rs/src/: lib.rs
data/: README.md  drugbank.py  relation_types.tsv  relation_types.xlsx  relation_types_embeddings.tsv  test.ipynb
data/algorithms/deg/: all_genes.json  volcano_plot.json
data/entity_attr/: drugbank.py  impact_factor_2024.tsv
data/scripts/: gen_embeddings.py
docker/: .env  docker-compose-arm64.yaml  docker-compose.yaml
docker/conf/: dashboard.sh  entrypoint.sh  local_dev.conf  pg_hba.conf  postgresql.conf
docs/: publications.md
examples/: entity.tsv  entity_embedding.tsv  example.sql  html.rs  knowledge_curation.tsv  merge_relation_entity.sql  prompts.md  relation.tsv  schedule.rs
migrations/: 20230701_init.down.sql  20230701_init.up.sql  20230705_add_embedding.down.sql  20230705_add_embedding.up.sql  20230912_enable_searching.down.sql  20230912_enable_searching.up.sql  20231029_add_column.down.sql  20231029_add_column.up.sql  20231030_alter_emb_size.down.sql  20231030_alter_emb_size.up.sql  20231208_add_dataset_column.down.sql  20231208_add_dataset_column.up.sql  20231218_add_ai_msg_table.down.sql  20231218_add_ai_msg_table.up.sql  20240107_add_emb_metadata_table.down.sql  20240107_add_emb_metadata_table.up.sql  20240401_add_compound_metadata_table.down.sql  20240401_add_compound_metadata_table.up.sql  20240709_add_journal_metadata_table.down.sql  20240709_add_journal_metadata_table.up.sql  20240809_add_prompt_template_column.down.sql  20240809_add_prompt_template_column.up.sql  20240906_add_key_sentence_table.down.sql  20240906_add_key_sentence_table.up.sql  20240920_add_tables_for_workflow.down.sql  20240920_add_tables_for_workflow.up.sql
src/: lib.rs
src/algorithm/: deg.rs  kge.rs  knn.rs  mod.rs
src/algorithm/theme/: mod.rs  npg.rs
src/api/: auth.rs  mod.rs  model.rs  publication.rs  req.rs  route.rs  schema.rs  util.rs
src/model/: core.rs  embedding.rs  entity_attr.rs  graph.rs  init_db.rs  init_sql.rs  kge.rs  llm.rs  metadata.rs  mod.rs  publication.rs  util.rs  workspace.rs
src/model/entity/: compound.rs  journal.rs  mod.rs
src/pgvector/: README.md  mod.rs  postgres_ext.rs  sqlx_ext.rs  vector.rs
src/proxy/: mod.rs  website.rs
src/query/: cypher_builder.rs  mod.rs  sql_builder.rs
src/query_builder/: cypher_builder.rs  mod.rs  query_builder.md  sql_builder.rs
src/schedule/: mod.rs  task_manager.rs  workflow.rs
studio/: package.json  plugin.ts
studio/config/: config.embed.ts  config.ts  defaultSettings.ts  perf_hooks.ts  proxy.ts  routes.ts
studio/custom/components/rapex/: Dashboard.less  Dashboard.tsx  Home.tsx  ModelConfig.tsx
studio/custom/doc/rapex/: download.md  help.md
studio/custom/home/: rapex.tsx
studio/custom/route/: biomedgps.ts  rapex.ts
studio/public/: CNAME  upgrade.html
studio/public/README/: about.md  changelog.md  download.md  help.md  knowledge_editor_manual.md  privacy_policy.md
studio/public/assets/: web-llm.worker.ts
studio/public/assets/README/: knowledge_editor_help.md
studio/public/js/: jquery-1.11.2.min.js  popper-1.11.0.min.js
studio/src/: app.tsx  global.less  global.tsx  loading.tsx  manifest.json
studio/src/EdgeInfoPanel/: CommonPanel.tsx  DiseaseGenePanel.tsx  DrugDiseasePanel.tsx  DrugGenePanel.tsx  PublicationDesc.tsx  PublicationPanel.tsx  index.less  index.md  index.t.ts  index.tsx
studio/src/NodeInfoPanel/: README.md  index.less  index.t.ts  index.tsx
studio/src/NodeInfoPanel/AlignmentViewer/: index.less  index.tsx
studio/src/NodeInfoPanel/ComposedProteinPanel/: index.less  index.tsx
studio/src/NodeInfoPanel/CompoundInfoPanel/: InfoPanel.tsx  Reference.tsx  index.less  index.t.ts  index.tsx
studio/src/NodeInfoPanel/ExpressionAtlas/: index.tsx
studio/src/NodeInfoPanel/GTexViewer/: index.tsx
studio/src/NodeInfoPanel/MutationViewer/: index.tsx
studio/src/NodeInfoPanel/ProteinInfoPanel/: InfoPanel.tsx  index.less  index.t.ts  (+2 more)
studio/src/StatEngine/: index.less  index.tsx  lang.ts
studio/src/components/: util.ts  webllm.ts
studio/src/pages/: 404.tsx  NotAuthorized.tsx  document.ejs
studio/src/plugins4kg/: index.less  index.tsx  utils.tsx
studio/src/wrappers/: param.tsx
wasm/: Cargo.toml  README.md  index.html  mecfs_subgraph.json
wasm/src/: lib.rs
(+102 files in other folders)
