[package]
authors = ["Jingcheng Yang <yjcyxky@163.com>"]
documentation = "https://github.com/yjcyxky/biomedgps/blob/master/README.md"
edition = "2021"
homepage = "https://github.com/yjcyxky/biomedgps"
keywords = ["biomedgps", "drug-repurposing", "knowledge-graph"]
name = "biomedgps"
readme = "README.md"
repository = "https://github.com/yjcyxky/biomedgps"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "biomedgps"
path = "src/bin/biomedgps.rs"

[[bin]]
name = "biomedgps-cli"
path = "src/bin/biomedgps-cli.rs"

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.17"
log4rs = "1.2.0"
poem = { version = "1.3.55", features = ["embed"] }
poem-openapi = { version = "2.0.26", features = [
    "swagger-ui",
    "chrono",
    "uuid"
] }
sqlx = { version = "0.6.3", features = [
    "postgres",
    "macros",
    "runtime-tokio-rustls",
    "migrate",
    "chrono"
] }
include_dir = "0.7.3"
regex = "1"
csv = "1.1.6"
tempfile = "3.2.0"
stderrlog = "0.5.4"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
validator = { version = "0.16.1", features = ["derive"] }
structopt = { version = "0.3.26", default-features = false }
tokio = { version = "1.28.2", features = [
    "rt-multi-thread",
    "macros",
    "signal"
] }
uuid = { version = "1.3.3", features = ["serde", "v4"] }
rust-embed = "6.7.0"
custom_error = "1.9.2"
