[workspace]
members = [
    "wasm"
]

[package]
authors = ["Jingcheng Yang <yjcyxky@163.com>"]
documentation = "https://github.com/yjcyxky/biomedgps/blob/master/README.md"
edition = "2021"
homepage = "https://github.com/yjcyxky/biomedgps"
keywords = ["biomedgps", "drug-repurposing", "knowledge-graph"]
name = "biomedgps"
readme = "README.md"
repository = "https://github.com/yjcyxky/biomedgps"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "biomedgps"
path = "src/bin/biomedgps.rs"

[[bin]]
name = "biomedgps-cli"
path = "src/bin/biomedgps-cli.rs"

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.37", features = ["serde"] }
wasm-bindgen = "0.2.92"
dotenv = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.17"
log4rs = "1.2.0"
poem = { version = "1.3.55", features = ["embed", "test"] }
poem-openapi = { version = "2.0.26", features = [
    "swagger-ui",
    "chrono",
    "uuid"
] }
sqlx = { version = "0.6.3", features = [
    "postgres",
    "macros",
    "runtime-tokio-rustls",
    "migrate",
    "chrono",
    "json"
] }
include_dir = "0.7.3"
regex = "1.10.4"
csv = "1.1.6"
tempfile = "3.2.0"
neo4rs = "0.6.2"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["raw_value"] }
serde_urlencoded = "0.7.0"
lol_html = "1.2.1"
validator = { version = "0.16.1", features = ["derive"] }
structopt = { version = "0.3.26", default-features = false }
tokio = { version = "1.28.2", features = [
    "rt-multi-thread",
    "macros",
    "signal"
] }
uuid = { version = "1.3.3", features = ["serde", "v4"] }
rust-embed = "8.3.0"
custom_error = "1.9.2"
byteorder = "1"
bytes = "1"
postgres = { version = "0.19.5" }
futures = "0.3.29"
url = "2.4.0"
jsonwebtoken = { version = "9.2.0" }
openssl = { version = "0.10.36", features = ["vendored"] }
hmac = "0.12.1"
reqwest = { version = "0.12.3", features = ["json", "stream"] }
base64 = "0.22.0"
sha2 = "0.10.7"
itertools = "0.13.0"
urlencoding = "2.1.3"

# Models
openai-api-rs = "2.1.4"

# Algorithms
kiddo = "4.2.0" # for KNN
polars = { version = "0.33.2", features = ["csv", "lazy"] }
plotly = "0.9.0"
once_cell = "1"
