[package]
name = "cromwell-api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cromwell_api_rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.5.0", features = ["v4"] }
log = "0.4.22"
env_logger = "0.11.5"
tera = "1.20.0"
anyhow = "1.0.71"
