[package]
name = "biomedgps-graph"
description = "A bunch of graph algorithms for biomedgps."
version = "0.2.0"
authors = ["Jingcheng Yang <yjcyxky@163.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustworkx-core = "0.14.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6.5"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
